fix(hero): things wrap better

--- a/src/input.css
+++ b/src/input.css
@@ -17,7 +17,7 @@
     }
 
     .hero {
-        height: 657px;
+        min-height: 657px;
         width: 100vw;
     }
 
@@ -44,7 +44,7 @@
     }
 
     .hero__text-container {
-        height: 292px;
+        min-height: 292px;
     }
 
     .hero__text {
@@ -55,7 +55,7 @@
         font-weight: 700;
         line-height: 54px;
         text-align: left;
-        height: 216px;
+        min-height: 216px;
     }
 
     .hero__text-container p {
@@ -63,7 +63,7 @@
         font-weight: 300;
         line-height: 20px;
         text-align: left;
-        height: 60px;
+        min-height: 60px;
     }
 
     .hero__img-container {
@@ -110,6 +110,7 @@
         .hero {
             height: 500px;
             width: 100vw;
+            min-height: 0px;
         }
 
         .hero__nav {
@@ -140,8 +141,8 @@
         }
 
         .hero__img-container {
-            margin-top: 60px;
-            height: 444px;
+            margin-top: 97px;
+            height: 407px;
         }
 
         .hero__img-bg {
@@ -158,14 +159,17 @@
         }
 
         .hero__text-container {
+            min-height: 0px;
             height: auto;
         }
 
         .hero__text-container h1 {
+            min-height: 0px;
             height: auto;
         }
         
         .hero__text-container p {
+            min-height: 0px;
             height: auto;
             width: 82.3943%;
         }
